--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,6 @@ on:
       - main
 
 env:
-  DOCKER_USERNAME: thedoorknobster
   REPO: thedoorknobster/sample-app
 
 jobs:
@@ -27,19 +26,10 @@ jobs:
           tag_prefix: "v"
           major_pattern: "BREAKING CHANGE:"
           minor_pattern: "feat:"
-          format: "v${major}.${minor}.${patch}-prerelease${increment}"
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          format: "v${major}.${minor}.${patch}-rc${increment}"
 
       - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ env.REPO }}:latest,${{ env.REPO }}:${{ steps.versioning.outputs.version }}
+        run: echo "${{ env.REPO }}:latest,${{ env.REPO }}:${{ steps.versioning.outputs.version }}"
 
       - name: Create Release
         if: ${{ !startsWith(github.ref, 'refs/tags/') }}
