--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           # Fetch all commits
           fetch-depth: 0
-
+      - name: PARAMETROS
+        run: echo "1.0.${GITHUB_RUN_NUMBER}.${GITHUB_RUN_ID}"
+        
       - name: Semantic versioning
         id: versioning
         uses: PaulHatch/semantic-version@v4.0.2
@@ -26,7 +28,7 @@ jobs:
           tag_prefix: "v"
           major_pattern: "BREAKING CHANGE:"
           minor_pattern: "feat:"
-          format: "v${major}.${minor}.${patch}-rc${increment}"
+          format: "v${major}.${minor}.${patch}" #-rc${increment}
 
       - name: Build and push
         run: echo "${{ env.REPO }}:latest,${{ env.REPO }}:${{ steps.versioning.outputs.version }}"
@@ -39,4 +41,5 @@ jobs:
         with:
           tag_name: ${{ steps.versioning.outputs.version }}
           release_name: ${{ steps.versioning.outputs.version }}
+          draft: true
           prerelease: true
