--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,8 +51,8 @@ jobs:
         run: |-
           echo "${{ env.REPO }}:latest,${{ env.REPO }}"
           echo "${{ toJson(steps.paulhatchversioning.outputs) }}"
-          echo "${{ toJson(steps.mathieudutourtag_version.outputs) }}""
-          echo "${{ steps.anothrNicktagversion.outputs.new_tag }}""
+          echo "${{ toJson(steps.mathieudutourtag_version.outputs) }}"
+          echo "${{ toJson(steps.anothrNicktagversion.outputs.new_tag) }}"
           
       # - name: Create Release
       #   if: ${{ !startsWith(github.ref, 'refs/tags/') }}
