--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,7 +52,7 @@ jobs:
           echo "${{ env.REPO }}:latest,${{ env.REPO }}"
           echo "${{ toJson(steps.paulhatchversioning.outputs) }}"
           echo "${{ toJson(steps.mathieudutourtag_version.outputs) }}"
-          echo "${{ toJson(steps.anothrNicktagversion.outputs.new_tag) }}"
+          echo "${{ toJson(steps.anothrNicktagversion.outputs) }}"
           
       # - name: Create Release
       #   if: ${{ !startsWith(github.ref, 'refs/tags/') }}
