--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,9 +50,14 @@ jobs:
       - name: Build and push
         run: |-
           echo "${{ env.REPO }}:latest,${{ env.REPO }}"
-          echo "${{ toJson(steps.paulhatchversioning.outputs) }}"
-          echo "${{ toJson(steps.mathieudutourtag_version.outputs) }}"
-          echo "${{ toJson(steps.anothrNicktagversion.outputs) }}"
+          echo "${{ steps.paulhatchversioning.outputs.version }}"  
+          echo "${{ steps.paulhatchversioning.outputs.version_tag }}" 
+          echo "${{ steps.mathieudutourtag_version.outputs.previous_version }}"  
+          echo "${{ steps.mathieudutourtag_version.outputs.previous_tag }}"  
+          echo "${{ steps.mathieudutourtag_version.outputs.new_version }}"  
+          echo "${{ steps.mathieudutourtag_version.outputs.new_tag }}"  
+          echo "${{ steps.anothrNicktagversion.outputs.old_tag }}"  
+          echo "${{ steps.anothrNicktagversion.outputs.new_tag }}" 
           
       # - name: Create Release
       #   if: ${{ !startsWith(github.ref, 'refs/tags/') }}
