--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,34 +1,34 @@
-# .github/release.yml
+# # .github/release.yml
 
-changelog:
-  exclude:
-    labels:
-      - ignore-for-release
-  categories:
-    - title: Breaking Changes 🛠
-      labels:
-        - Semver-Major
-        - breaking-change
-    - title: 🚀 Features
-      labels:
-        - feature
-        - feat
-        - enhancement
-        - Semver-Minor
-    - title: 🐛 Bug Fixes
-      labels:
-        - fix
-        - bugfix
-        - bug
-    - title: 🧰 Maintenance
-      labels:
-        - fix
-        - bugfix
-        - bug
-        - chore
-    - title: Other Changes
-      labels:
-        - "*"
+# changelog:
+#   exclude:
+#     labels:
+#       - ignore-for-release
+#   categories:
+#     - title: Breaking Changes 🛠
+#       labels:
+#         - Semver-Major
+#         - breaking-change
+#     - title: 🚀 Features
+#       labels:
+#         - feature
+#         - feat
+#         - enhancement
+#         - Semver-Minor
+#     - title: 🐛 Bug Fixes
+#       labels:
+#         - fix
+#         - bugfix
+#         - bug
+#     - title: 🧰 Maintenance
+#       labels:
+#         - fix
+#         - bugfix
+#         - bug
+#         - chore
+#     - title: Other Changes
+#       labels:
+#         - "*"
 
 
 
