--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,23 +35,22 @@ jobs:
           echo "previous_tag: ${{ steps.mathieudutourtag_version.outputs.previous_tag }}"  
           echo "new_version: ${{ steps.mathieudutourtag_version.outputs.new_version }}"  
           echo "new_tag: ${{ steps.mathieudutourtag_version.outputs.new_tag }}"  
-
           
-      - name: Create Release
-        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-        with:
-          tag_name: ${{ steps.mathieudutourtag_version.outputs.new_tag }}
-          release_name: ${{ steps.mathieudutourtag_version.outputs.new_tag }}
-          draft: true
-          prerelease: true
+      # - name: Create Release
+      #   if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.github_token }}
+      #   with:
+      #     tag_name: ${{ steps.mathieudutourtag_version.outputs.new_tag }}
+      #     release_name: ${{ steps.mathieudutourtag_version.outputs.new_tag }}
+      #     draft: true
+      #     prerelease: true
 
-      - name: Create a GitHub release2
-        uses: ncipollo/release-action@v1
-        with:
-          tag: "${{ steps.mathieudutourtag_version.outputs.new_tag }}.1"
-          name: Release ${{ steps.mathieudutourtag_version.outputs.new_tag }}
-          body: ${{ steps.mathieudutourtag_version.outputs.changelog }}
-          draft: true
+      # - name: Create a GitHub release2
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     tag: "${{ steps.mathieudutourtag_version.outputs.new_tag }}.1"
+      #     name: Release ${{ steps.mathieudutourtag_version.outputs.new_tag }}
+      #     body: ${{ steps.mathieudutourtag_version.outputs.changelog }}
+      #     draft: true
