--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,16 @@
-name: release
+name: release created
 on:
+  
   push:
-    tags:
-      - 'v*'
-  release:
-    types: [published]
+    branches:
+      - 'release/**'
+    #tags:
+    #  - 'v*'
+  #release:
+  #  types: [published]
+
+permissions:
+  contents: read
 
 env:
   DOCKER_USERNAME: thedoorknobster
@@ -29,3 +35,23 @@ jobs:
 
       - name: Build and push
         run: echo "${{ env.REPO }}:latest,${{ env.REPO }}:${{ env.VERSION }}"
+
+  update_release_draft:
+    permissions:
+      # write permission is required to create a github release
+      contents: write
+      # write permission is required for autolabeler
+      # otherwise, read permission is required at least
+      pull-requests: write
+    runs-on: ['azure-identity']
+    steps:
+      # Drafts your next Release notes as Pull Requests are merged 
+      # into "master"
+      - uses: release-drafter/release-drafter@v5
+        # (Optional) specify config name to use, relative to .github/. 
+        # Default: release-drafter.yml
+        # with:
+        #   config-name: my-config.yml
+        #   disable-autolabeler: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
